[project]
authors = [
  {name = "seonglae", email = "sungle3737@gmail.com"},
]
dependencies = [
    "fire>=0.5.0",
    "transformers>=4.34.0",
    "chromadb>=0.4.14",
    "datasets>=2.14.5",
    "teicli>=0.3.1",
    "faiss-cpu>=1.7.4",
    "vecs>=0.4.1",
]
description = "Add your description here"
name = "curiosity"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true
